tests/type_errors/unit_method_error.nos
# expect_error: has no method length
# Calling collection methods on Unit should give compile error
main() = {
    x = print("hello")
    x.length()
}
